<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/textView"
        android:textSize="@dimen/abc_dropdownitem_icon_width"
        android:layout_above="@+id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textColor="@color/accent_material_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass_login"
        android:text="PASSWORD"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_login"
        android:text="@string/email"
        android:layout_above="@+id/pass_login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:id="@+id/acceder_boton"
        android:layout_below="@+id/recuperar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/registar"
        android:layout_marginTop="55dp"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:textColor="@color/accent_material_light"
        android:layout_below="@+id/acceder_boton"
        android:layout_toLeftOf="@+id/acceder_boton"
        android:layout_toStartOf="@+id/acceder_boton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passolvidada"
        android:id="@+id/recuperar"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
        android:textColor="@color/accent_material_light"
        android:layout_below="@+id/pass_login"
        android:layout_alignRight="@+id/acceder_boton"
        android:layout_alignEnd="@+id/acceder_boton" />

</RelativeLayout>