<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/textView4"
        android:textSize="@dimen/abc_dropdownitem_icon_width"
        android:textColor="@color/accent_material_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_registro"
        android:text="@string/email"
        android:layout_below="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass_registro"
        android:text="PASSWORD"
        android:layout_below="@+id/email_registro"
        android:layout_alignRight="@+id/email_registro"
        android:layout_alignEnd="@+id/email_registro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dni_registro"
        android:text="@string/dni"
        android:layout_below="@+id/pass_registro2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/registro_boton"
        android:layout_alignEnd="@+id/registro_boton"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_registro"
        android:text="@string/name"
        android:layout_below="@+id/dni_registro"
        android:layout_alignRight="@+id/registro_boton"
        android:layout_alignEnd="@+id/registro_boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registro_boton"
        android:layout_below="@+id/name_registro"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass_registro2"
        android:text="PASSWORD"
        android:layout_below="@+id/pass_registro"
        android:layout_alignRight="@+id/registro_boton"
        android:layout_alignEnd="@+id/registro_boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"/>
</RelativeLayout>