<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/efectuarcompra"
        android:id="@+id/efectuarcompra_button"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaciarcesta"
        android:id="@+id/vaciarcesta_button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/efectuarcompra_button"
        android:layout_toEndOf="@+id/efectuarcompra_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cesta"
        android:id="@+id/textView7"
        android:textSize="@dimen/abc_dropdownitem_icon_width"
        android:textColor="@color/accent_material_light"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView_cesta"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_above="@+id/efectuarcompra_button"
        android:layout_below="@+id/textView7" />
</RelativeLayout>