<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configurarubi"
        android:id="@+id/textView12"
        android:textSize="@dimen/abc_dropdownitem_icon_width"
        android:textColor="@color/accent_material_light"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <!--fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button" /-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicarubi"
        android:id="@+id/aplicar_ubi_button"
        android:layout_below="@+id/longitud_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitud_tv"
        android:inputType="number"
        android:layout_above="@+id/textView13"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_alignRight="@+id/textView12"
        android:layout_alignEnd="@+id/textView12" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitud_tv"
        android:inputType="number"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/latitud_tv"
        android:layout_alignEnd="@+id/latitud_tv"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitud"
        android:id="@+id/textView13"
        android:layout_alignLeft="@+id/latitud_tv"
        android:layout_alignStart="@+id/latitud_tv"
        android:layout_above="@+id/longitud_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitud"
        android:id="@+id/textView14"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:layout_above="@+id/latitud_tv" />



</RelativeLayout>