<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factura"
        android:id="@+id/textView8"
        android:textSize="@dimen/abc_dropdownitem_icon_width"
        android:textColor="@color/accent_material_light"
        android:layout_marginTop="41dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_sin_iva_"
        android:id="@+id/textView18"
        android:layout_marginBottom="73dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView8"
        android:layout_toStartOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/precio_final_sin"
        android:layout_below="@+id/listViewFactura"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_"
        android:id="@+id/textView21"
        android:layout_below="@+id/precio_final_sin"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/precio_final"
        android:layout_below="@+id/precio_final_sin"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/forma_pago"
        android:layout_below="@+id/textView21"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atrasfactura"
        android:id="@+id/volver_factura"
        android:layout_alignBottom="@+id/forma_pago"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewFactura"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_above="@+id/textView18" />
</RelativeLayout>