<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_tv"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/nombre_boton"
        android:layout_toStartOf="@+id/nombre_boton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicar"
        android:id="@+id/nombre_boton"
        android:layout_alignBottom="@+id/nombre_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configurarperfil"
        android:id="@+id/textView10"
        android:textSize="@dimen/abc_dropdownitem_icon_width"
        android:textColor="@color/accent_material_light"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pass_tv"
        android:layout_below="@+id/nombre_boton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:layout_toLeftOf="@+id/nombre_boton"
        android:layout_toStartOf="@+id/nombre_boton"
        android:password="true"
        android:text="asd"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicar"
        android:id="@+id/pass_boton"
        android:layout_alignBottom="@+id/pass2_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pass2_tv"
        android:layout_below="@+id/pass_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/pass_boton"
        android:layout_toStartOf="@+id/pass_boton"
        android:password="true"
        android:text="dsa"
        android:layout_margin="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:id="@+id/atras_boton"
        android:layout_below="@+id/pass2_tv"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_marginTop="60dp" />
</RelativeLayout>